gen/nl/saxion/cos/TheRealDealLangParser.java
// Generated from C:/Users/kimjongun/IdeaProjects/04/src\TheRealDealLang.g4 by ANTLR 4.9.1
package nl.saxion.cos;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TheRealDealLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, MUL=3, ADD=4, SUB=5, BIGGER_THEN=6, SMALLER_THEN=7, EQUALS=8, 
		ASSIGN=9, NOT_EQUALS=10, DIVIDE=11, GREATER_THAN_AND_EQUAL=12, OR=13, 
		LOWER_THAN_AND_EQUAL=14, AND=15, COMMA=16, SEMICOLON=17, SCANNER=18, START_BLOCK=19, 
		END_BLOCK=20, PRINT=21, TRUE=22, FALSE=23, QUOTE=24, DOUBLE_SEP=25, VOID_KEYWORD=26, 
		TYPE=27, WHILE=28, IF_KEYWORD=29, ELSE_KEYWORD=30, INT_KEYWORD=31, DOUBLE_KEYWORD=32, 
		BOOLEAN_KEYWORD=33, TEXT_KEYWORD=34, RETURN_KEYWORD=35, IDENTIFIER=36, 
		INT=37, TEXT_VALUE=38, DOUBLE=39, LINE_COMMENT=40, WS=41;
	public static final int
		RULE_compileUnit = 0, RULE_statement = 1, RULE_block = 2, RULE_expr = 3, 
		RULE_condition = 4, RULE_function_definition = 5, RULE_declaration = 6, 
		RULE_argument_list = 7, RULE_function_call = 8, RULE_expression_list = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"compileUnit", "statement", "block", "expr", "condition", "function_definition", 
			"declaration", "argument_list", "function_call", "expression_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'*'", "'+'", "'-'", "'>'", "'<'", "'=='", "'='", 
			"'!='", "'/'", "'>='", "'||'", "'<='", "'&&'", "','", "';'", null, "'{'", 
			"'}'", "'print'", "'true'", "'false'", "'\"'", "'.'", "'void'", null, 
			"'while'", "'if'", "'else'", "'int'", "'double'", "'boolean'", "'Text'", 
			"'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "MUL", "ADD", "SUB", "BIGGER_THEN", "SMALLER_THEN", 
			"EQUALS", "ASSIGN", "NOT_EQUALS", "DIVIDE", "GREATER_THAN_AND_EQUAL", 
			"OR", "LOWER_THAN_AND_EQUAL", "AND", "COMMA", "SEMICOLON", "SCANNER", 
			"START_BLOCK", "END_BLOCK", "PRINT", "TRUE", "FALSE", "QUOTE", "DOUBLE_SEP", 
			"VOID_KEYWORD", "TYPE", "WHILE", "IF_KEYWORD", "ELSE_KEYWORD", "INT_KEYWORD", 
			"DOUBLE_KEYWORD", "BOOLEAN_KEYWORD", "TEXT_KEYWORD", "RETURN_KEYWORD", 
			"IDENTIFIER", "INT", "TEXT_VALUE", "DOUBLE", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TheRealDealLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TheRealDealLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompileUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TheRealDealLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compileUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitCompileUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileUnitContext compileUnit() throws RecognitionException {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << SCANNER) | (1L << START_BLOCK) | (1L << PRINT) | (1L << TRUE) | (1L << FALSE) | (1L << TYPE) | (1L << WHILE) | (1L << IF_KEYWORD) | (1L << RETURN_KEYWORD) | (1L << IDENTIFIER) | (1L << INT) | (1L << TEXT_VALUE) | (1L << DOUBLE))) != 0)) {
				{
				{
				setState(20);
				statement();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprStmtContext extends StatementContext {
		public ExprContext stmtExpr;
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStmtContext extends StatementContext {
		public TerminalNode WHILE() { return getToken(TheRealDealLangParser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignVarStmtContext extends StatementContext {
		public TerminalNode IDENTIFIER() { return getToken(TheRealDealLangParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(TheRealDealLangParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public AssignVarStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitAssignVarStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockStmtContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitBlockStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InitStmtContext extends StatementContext {
		public Token type;
		public Token name;
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public TerminalNode TYPE() { return getToken(TheRealDealLangParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TheRealDealLangParser.IDENTIFIER, 0); }
		public List<TerminalNode> ASSIGN() { return getTokens(TheRealDealLangParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(TheRealDealLangParser.ASSIGN, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InitStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitInitStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallStatementContext extends StatementContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public FunctionCallStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitFunctionCallStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintCallStatementContext extends StatementContext {
		public TerminalNode PRINT() { return getToken(TheRealDealLangParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public PrintCallStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitPrintCallStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStmtContext extends StatementContext {
		public TerminalNode RETURN_KEYWORD() { return getToken(TheRealDealLangParser.RETURN_KEYWORD, 0); }
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatementContext extends StatementContext {
		public ConditionContext ifCondition;
		public BlockContext trueBlock;
		public BlockContext falseBlock;
		public TerminalNode IF_KEYWORD() { return getToken(TheRealDealLangParser.IF_KEYWORD, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE_KEYWORD() { return getToken(TheRealDealLangParser.ELSE_KEYWORD, 0); }
		public IfStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionDefinitionStamenetContext extends StatementContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public FunctionDefinitionStamenetContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitFunctionDefinitionStamenet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDeclStmtContext extends StatementContext {
		public Token type;
		public Token name;
		public TerminalNode SEMICOLON() { return getToken(TheRealDealLangParser.SEMICOLON, 0); }
		public TerminalNode TYPE() { return getToken(TheRealDealLangParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TheRealDealLangParser.IDENTIFIER, 0); }
		public VarDeclStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitVarDeclStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new BlockStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				block();
				}
				break;
			case 2:
				_localctx = new FunctionDefinitionStamenetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				function_definition();
				}
				break;
			case 3:
				_localctx = new FunctionCallStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(30);
				function_call();
				setState(31);
				match(SEMICOLON);
				}
				break;
			case 4:
				_localctx = new VarDeclStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(33);
				((VarDeclStmtContext)_localctx).type = match(TYPE);
				setState(34);
				((VarDeclStmtContext)_localctx).name = match(IDENTIFIER);
				setState(35);
				match(SEMICOLON);
				}
				break;
			case 5:
				_localctx = new InitStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(36);
				((InitStmtContext)_localctx).type = match(TYPE);
				setState(37);
				((InitStmtContext)_localctx).name = match(IDENTIFIER);
				setState(42);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(38);
						match(ASSIGN);
						setState(39);
						expr(0);
						}
						} 
					}
					setState(44);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(45);
				match(SEMICOLON);
				}
				break;
			case 6:
				_localctx = new AssignVarStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(46);
				match(IDENTIFIER);
				setState(47);
				match(ASSIGN);
				setState(48);
				expr(0);
				setState(49);
				match(SEMICOLON);
				}
				break;
			case 7:
				_localctx = new PrintCallStatementContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(51);
				match(PRINT);
				setState(52);
				match(T__0);
				setState(53);
				expr(0);
				setState(54);
				match(T__1);
				setState(55);
				match(SEMICOLON);
				}
				break;
			case 8:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(57);
				match(RETURN_KEYWORD);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << SCANNER) | (1L << TRUE) | (1L << FALSE) | (1L << IDENTIFIER) | (1L << INT) | (1L << TEXT_VALUE) | (1L << DOUBLE))) != 0)) {
					{
					setState(58);
					expr(0);
					}
				}

				setState(61);
				match(SEMICOLON);
				}
				break;
			case 9:
				_localctx = new IfStatementContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(62);
				match(IF_KEYWORD);
				setState(63);
				((IfStatementContext)_localctx).ifCondition = condition();
				setState(64);
				((IfStatementContext)_localctx).trueBlock = block();
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE_KEYWORD) {
					{
					setState(65);
					match(ELSE_KEYWORD);
					setState(66);
					((IfStatementContext)_localctx).falseBlock = block();
					}
				}

				}
				break;
			case 10:
				_localctx = new WhileStmtContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(69);
				match(WHILE);
				setState(70);
				condition();
				setState(71);
				block();
				}
				break;
			case 11:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(73);
				((ExprStmtContext)_localctx).stmtExpr = expr(0);
				setState(74);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode START_BLOCK() { return getToken(TheRealDealLangParser.START_BLOCK, 0); }
		public TerminalNode END_BLOCK() { return getToken(TheRealDealLangParser.END_BLOCK, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(START_BLOCK);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << SCANNER) | (1L << START_BLOCK) | (1L << PRINT) | (1L << TRUE) | (1L << FALSE) | (1L << TYPE) | (1L << WHILE) | (1L << IF_KEYWORD) | (1L << RETURN_KEYWORD) | (1L << IDENTIFIER) | (1L << INT) | (1L << TEXT_VALUE) | (1L << DOUBLE))) != 0)) {
				{
				{
				setState(79);
				statement();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(END_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExMulExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MUL() { return getToken(TheRealDealLangParser.MUL, 0); }
		public TerminalNode DIVIDE() { return getToken(TheRealDealLangParser.DIVIDE, 0); }
		public ExMulExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitExMulExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoubleExprContext extends ExprContext {
		public Token value;
		public TerminalNode DOUBLE() { return getToken(TheRealDealLangParser.DOUBLE, 0); }
		public DoubleExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitDoubleExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntExprContext extends ExprContext {
		public Token value;
		public TerminalNode INT() { return getToken(TheRealDealLangParser.INT, 0); }
		public IntExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitIntExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncExprContext extends ExprContext {
		public Token func;
		public TerminalNode IDENTIFIER() { return getToken(TheRealDealLangParser.IDENTIFIER, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TheRealDealLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TheRealDealLangParser.COMMA, i);
		}
		public FuncExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitFuncExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TextExprContext extends ExprContext {
		public TerminalNode TEXT_VALUE() { return getToken(TheRealDealLangParser.TEXT_VALUE, 0); }
		public TextExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitTextExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanExprContext extends ExprContext {
		public Token value;
		public TerminalNode TRUE() { return getToken(TheRealDealLangParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(TheRealDealLangParser.FALSE, 0); }
		public BooleanExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitBooleanExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(TheRealDealLangParser.AND, 0); }
		public TerminalNode OR() { return getToken(TheRealDealLangParser.OR, 0); }
		public LogicalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitLogicalExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddsubExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(TheRealDealLangParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(TheRealDealLangParser.SUB, 0); }
		public AddsubExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitAddsubExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParensExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitParensExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableExprContext extends ExprContext {
		public Token value;
		public TerminalNode IDENTIFIER() { return getToken(TheRealDealLangParser.IDENTIFIER, 0); }
		public VariableExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitVariableExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ScannerExprContext extends ExprContext {
		public TerminalNode SCANNER() { return getToken(TheRealDealLangParser.SCANNER, 0); }
		public ScannerExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitScannerExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallExprContext extends ExprContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public FunctionCallExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheRealDealLangVisitor ) return ((TheRealDealLangVisitor<? extends T>)visitor).visitFunctionCallExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompareExprContext extends ExprContext {
		public ExprContext left;
		public Token cpr;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
